<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyPrinter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_textandpicture">图文</string>
    <string name="main_web">网页</string>
    <string name="main_command">命令</string>
    <string name="main_setting">设置</string>
    <string name="textandpicture_picture">图片</string>
    <string name="textandpicture_text">文档</string>
    <string name="textandpicture_barcode">条码</string>
    <string name="web_favorites">收藏夹</string>
    <string name="web_history">历史记录</string>
    <string name="web_guide">导航</string>
    <string name="command_ascii">发送文本字符串</string>
    <string name="command_hex">发送命令</string>
    <string name="command_listen">侦听模式</string>
    <string name="setting_connectwithbindedprinter">连接已配对打印机</string>
    <string name="setting_searchandconnect">搜索并连接</string>
    <string name="setting_set">配置打印机</string>
    <string name="setting_updateprogram">更新程序</string>
    <string name="setting_updatefont">更新字体</string>
    <string name="setting_autoconnection">后台自动连接</string>
    <string name="actionbar_back">返回</string>
    <string name="actionbar_options">选项</string>
    <string name="space">space</string>
    <string name="connecting">正在连接</string>
    <string name="connected">已经连接</string>
    <string name="disconnected">连接断开</string>
    <string name="servicestart">服务开启</string>
    <string name="servicestop">服务停止</string>
    <string name="serviceinit">正在初始化</string>
    <string name="connectfailed">连接失败</string>
    <string name="autoconnect">自动连接</string>
    <string name="hint_setting_autoconnect">选择一个设备以自动连接</string>
    <string name="hello">欢迎使用</string>
    <string name="androidbluetoothprinter">Android 蓝牙打印服务</string>
    <string name="startconnecting">正在连接</string>
    <string name="waitconnecting">等待连接</string>
    <string name="hintorgx">起始位置(取值范围0~65535)</string>
    <string name="hintwidthx">宽度(取值范围2~6)</string>
    <string name="hintheight">高度(取值范围1~255)</string>
    <string name="hintfonttype">字体(0~标准字体 1~压缩字体)</string>
    <string name="hintfontposition">字体位置(0~不打印 1~上方 2~下方 3~上下)</string>
    <string name="btsaveparams">保存</string>
    <string name="hintbtname">蓝牙名称(12个字符以内)</string>
    <string name="hintbtpassword">蓝牙密码(4个数字)</string>
    <string name="hintbaudrate">串口波特率</string>
    <string name="hintlanguage">代码页(语言)</string>
    <string name="hintdarkness">打印浓度</string>
    <string name="hintdefaultfont">默认字体大小</string>
    <string name="hintlfcr">走纸标记</string>
    <string name="hintidletime">空闲等待时间(s)</string>
    <string name="hintpowerofftime">自动关机时间(s)</string>
    <string name="hintmaxfeedlength">走纸键最大距离(mm)</string>
    <string name="hintblackmarksearchlength">黑标最大寻找距离(mm)</string>
    <string name="hintsystemname">系统名称</string>
    <string name="hintsystemsn">序列号</string>
    <string name="lastreceive">最后收到</string>
    <string name="device">设备</string>
    <string name="address">地址</string>
    <string name="receive">接收</string>
    <string name="success">成功</string>
    <string name="failed">失败</string>
    <string name="activeconnect">主动连接</string>
    <string name="blank"></string>
    <string name="notset">未启用</string>
    <string name="command">命令</string>
    <string name="param">参数</string>
    <string name="datalength">数据长度</string>
    <string name="data">数据</string>
    <string name="send">发送</string>
    <string name="getback">返回</string>
    <string name="popup_menu_search">搜索</string>
    <string name="popup_menu_add">添加</string>
    <string name="popup_menu_edit">编辑</string>
    <string name="debugon">调试已开</string>
    <string name="debugoff">调试已关</string>
    <string name="stopserviceandexit">停止服务并退出</string>
    <string name="defaultprintername">便携打印机</string>
    <string name="defaultbtname">我的打印机</string>
    <string name="defaultprintersn">1029</string>
    <string name="defaultbtpwd">0000</string>
    <string name="readinfo">读取信息</string>
    <string name="inputreadoffset">请输入读取偏移地址</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="formatinvalid">格式错误</string>
    <string name="readflash">读取FLASH</string>
    <string name="format_hex">16进制</string>
    <string name="format_ascii">字符</string>
    <string name="time">时间</string>
    <string name="bluetoothrequired">需要蓝牙</string>
    <string name="print">打印</string>
    <string name="fontsize">字体大小</string>
    <string name="fontsize_12x24">12x24</string>
    <string name="fontsize_9x17">9x17</string>
    <string name="darkness">浓度</string>
    <string name="scaletimes">放大倍数</string>
    <string name="width">宽</string>
    <string name="height">高</string>
    <string name="blackwhitereverse">黑白反显</string>
    <string name="underline">下划线</string>
    <string name="_light">稍淡</string>
    <string name="darkness_standard">一般</string>
    <string name="darkness_dark">很浓</string>
    <string name="scaletimes_0">不放大</string>
    <string name="bold">加粗</string>
    <string name="underline1">1点下划线</string>
    <string name="underline2">2点下划线</string>
    <string name="textalign">对齐方式</string>
    <string name="textalign_left">左对齐</string>
    <string name="textalign_center">居中对齐</string>
    <string name="textalign_right">右对齐</string>
    <string name="scaletimes_width_0">宽不放大</string>
    <string name="scaletimes_height_0">高不放大</string>
    <string name="upsidedownprint">倒置打印</string>
    <string name="turnright90">右转90度</string>
    <string name="setandshow">设置和演示</string>
    <string name="refreshing">正在刷新</string>
    <string name="refreshsuccess">刷新成功</string>
    <string name="refreshfailed">刷新失败</string>
    <string name="photos">照片</string>
    <string name="loading">正在努力加载</string>
    <string name="loadok">加载完毕</string>
    <string name="loadfailed">加载失败</string>
    <string name="ksmooth">细腻</string>
    <string name="ksoft">柔和</string>
    <string name="sample_setandshow_01">abcdefghijklmnopqrstuvwxyz</string>
    <string name="sample_setandshow_02">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="sample_setandshow_03">0123456789</string>
    <string name="update">升级</string>
    <string name="filename">文件名</string>
    <string name="selectfile">选择文件</string>
    <string name="updating">正在更新</string>
    <string name="endupdate">更新完毕</string>
    <string name="startupdate">开始更新</string>
    <string name="updatefailed">更新失败</string>
    <string name="updatenotstart">更新未启动</string>
    <string name="search">搜索</string>
    <string name="inputwebsite">输入网址</string>
    <string name="coolwebsite">手机酷站</string>
    <string name="perfectwebsite">精品分类</string>
    <string name="appandgame">软件游戏</string>
    <string name="lifeserver">生活服务</string>
    <string name="baidu">百度</string>
    <string name="fenghuang">凤凰</string>
    <string name="wangyi">网易</string>
    <string name="souhu">搜狐</string>
    <string name="xinlang">新浪</string>
    <string name="tengxun">腾讯</string>
    <string name="yisou">宜搜</string>
    <string name="threeg">3G</string>
    <string name="taobao">淘宝</string>
    <string name="fanke">凡客</string>
    <string name="youku">优酷</string>
    <string name="youxi">游戏</string>
    <string name="yingyong">应用</string>
    <string name="wangyou">网游</string>
    <string name="youyuan">有缘</string>
    <string name="printclipboard">打印剪切板文本</string>
    <string name="selectpic">选择图片</string>
    <string name="setwidth">设置宽度</string>
    <string name="selectfontlibrary">选择字库</string>
    <string name="start">开始</string>
    <string name="barcode">条形码</string>
    <string name="qrcode">二维码</string>
    <string name="text">文本</string>
    <string name="barcodetype">条码类型</string>
    <string name="startorgx">起始位置</string>
    <string name="barcodewidth">条码宽度</string>
    <string name="barcodeheight">条码高度</string>
    <string name="barcodefonttype">条码文本字体类型</string>
    <string name="barcodefontposition">条码文本位置</string>
    <string name="qrcodestartorgx">二维码起始位置</string>
    <string name="qrcodetype">二维码类型</string>
    <string name="qrcodewidth">二维码宽度</string>
    <string name="errorcorrectionlevel">纠错等级</string>
    <string name="setkey">设置密钥</string>
    <string name="set">设置</string>
    <string name="key">密钥</string>
    <string name="deskeyformat">密钥必须为8个字节长</string>
    <string name="setkeyend">设置完毕，请重新连接以使设置生效</string>
    <string name="help">帮助</string>
    <string name="helpcontenttext">打印文本。设置和演示里面的字体风格对此有效。</string>
    <string name="helpcontentpicture">打印图片。</string>
    <string name="helpcontentsetandshow">设置和演示。按照需要设定字体风格。对任意文本都有效。</string>
    <string name="helpcontentbarcode">设置并打印条码</string>
    <string name="helpcontentqrcode">设置并打印二维码</string>
    <string name="helpcontentguide">浏览网页并打印</string>
    <string name="helpcontentreadinfo">读取flash信息</string>
    <string name="helpcontentconnectwithbonded">连接已配对打印机</string>
    <string name="helpcontentsetting">配置打印机。自动读取打印机配置信息。修改相应选项并保存即可更改配置。蓝牙信息需要重启以更新配置。</string>
    <string name="helpcontentupdateprogram">更新程序。SD卡跟目录下的printer目录中的程序会被显示出来。</string>
    <string name="helpcontentautoconnect">自动连接。设置自动连接方式。</string>
    <string name="helpcontentsetkey">设置密钥。第一次使用必须设置密钥。请确保打印机已连接。然后设置一个8位的密钥。</string>
    <string name="forward">前进</string>
    <string name="backward">后退</string>
    <string name="savebookmarks">保存书签</string>
    <string name="alert_dialog_webname">名称</string>
    <string name="alert_dialog_website">网址</string>
    <string name="alert_dialog_ok">确定</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="bookmarks">书签</string>
    <string name="lineheight">行高</string>
    <string name="point">点</string>
    <string name="rightspace">右间距</string>
    <string name="clear_cache_menu">Clear Caches</string>
    <string name="clear_cache_complete_toast">Caches have been cleared</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="no_network_connection_toast">No network connection found</string>

</resources>