<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutWeb"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <RelativeLayout
            android:id="@+id/relativeLayoutWeb01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:visibility="gone" >

            <RelativeLayout
                android:id="@+id/relativeLayoutWeb10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button1"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:clickable="false" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:clickable="false" />

                <Button
                    android:id="@+id/btFavourite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="left|center"
                    android:paddingLeft="70dp"
                    android:text="@string/web_favorites" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutWeb11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayoutWeb10" >

                <Button
                    android:id="@+id/button4"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:clickable="false" />

                <Button
                    android:id="@+id/btHistory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="left|center"
                    android:paddingLeft="70dp"
                    android:text="@string/web_history" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:clickable="false" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutWeb02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button7"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:clickable="false" />

            <Button
                android:id="@+id/btGuide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="left|center"
                android:paddingLeft="70dp"
                android:text="@string/web_guide" />

            <Button
                android:id="@+id/button9"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:clickable="false" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>